<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <ScrollView
        android:id="@+id/point_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".PointActivity">

            <RelativeLayout
                android:id="@+id/point_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="23dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.866"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/point_seak_layout">

                <ImageButton
                    android:id="@+id/point_pause_button"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="165dp"
                    android:layout_marginEnd="165dp"
                    android:adjustViewBounds="true"
                    android:background="#00FFFFFF"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/media_pause"
                    android:contentDescription="@string/pause_button_desc" />

                <ImageButton
                    android:id="@+id/point_stop_button"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="255dp"
                    android:layout_marginEnd="75dp"
                    android:adjustViewBounds="true"
                    android:background="#00FFFFFF"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/media_stop"
                    android:contentDescription="@string/stop_button_desc" />

                <ImageButton
                    android:id="@+id/point_start_button"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="75dp"
                    android:layout_marginEnd="255dp"
                    android:adjustViewBounds="true"
                    android:background="#00FFFFFF"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/media_start"
                    android:contentDescription="@string/start_button_desc" />


            </RelativeLayout>

            <TextView
                android:id="@+id/point_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/logo_yellow"
                android:textSize="50sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/point_image"
                android:layout_width="381dp"
                android:layout_height="258dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.448"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/point_name"
                app:srcCompat="@drawable/ic_launcher_background"
                android:contentDescription="@string/point_media_image" />

            <VideoView
                android:id="@+id/media_video"
                android:layout_width="381dp"
                android:layout_height="258dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/point_image"
                app:srcCompat="@drawable/ic_launcher_background" />

            <Button
                android:id="@+id/point_download_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/logo_yellow"
                android:text="@string/media_download"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.866"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/point_title_layout" />

            <LinearLayout
                android:id="@+id/point_seak_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginTop="23dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.866"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/media_video"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/media_current_time"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/media_seekBar"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteY="539dp" />

                <TextView
                    android:id="@+id/total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media_total_time"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>