<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="https://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground"
    android:id="@+id/trailItem">

    <androidx.cardview.widget.CardView
        android:id="@+id/contact_card_view"
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/light_blue"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/logo_yellow"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="55dp"
            android:text="@string/contact_phone"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="55dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="15dp"
            android:text="@string/contact_url"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="15dp"
            android:text="@string/contact_email"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contac_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/callbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="135dp"
            android:layout_marginEnd="15dp"
            android:textSize="23sp"
            android:backgroundTint="@color/logo_yellow"
            android:text="Call" />


    </androidx.cardview.widget.CardView>

</LinearLayout>